Refactor ShopItemCommand and ShopItemProvider for improved command handling and database interactions