@@ -1,8 +1,7 @@
 package de.murmelmeister.citybuild.command.commands.shop.item;
 
 import de.murmelmeister.citybuild.CityBuild;
-import de.murmelmeister.citybuild.api.economy.EconomyProviderImpl;
-import de.murmelmeister.citybuild.api.shop.item.ShopItemImpl;
+import de.murmelmeister.citybuild.api.economy.EconomyProvider;
 import de.murmelmeister.citybuild.command.CommandManager;
 import de.murmelmeister.citybuild.util.config.Configs;
 import de.murmelmeister.citybuild.util.config.Messages;
@@ -15,6 +14,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 public final class ShopItemCommand extends CommandManager {
     public ShopItemCommand(CityBuild plugin) {
@@ -26,30 +26,33 @@ public final class ShopItemCommand extends CommandManager {
         if (!isEnable(sender, Configs.COMMAND_ENABLE_SHOP_ITEM)) return true;
         if (!hasPermission(sender, Configs.PERMISSION_SHOP_ITEM)) return true;
 
-        // TODO: Remove this
-        if (args.length == 1 && args[0].equals("default")) {
+        /*
+         * TODO: Remove this
+         *
+         * 0        1
+         * shopItem [0]
+         * shopItem adddefault
+         */
+        if (args.length == 1 && args[0].equals("adddefault")) {
             customItems.addDefaultMaterials();
             return true;
         }
 
+        /*
+         * 0        1
+         * shopItem [0]
+         * shopItem import
+         */
         if (args.length == 1 && args[0].equals("import")) {
-            shopItem.importCSV(logger, config);
+            shopItem.importCSV(logger, config, customItems, shopCategory);
             sendMessage(sender, message.getString(Messages.SHOP_ITEM_IMPORT).replace("[FILE]", config.getString(Configs.IMPORT_DATA_SHOP_ITEMS)));
             return true;
         }
 
-        if (args.length < 3) {
-            sendMessage(sender, message.getString(Messages.COMMAND_SYNTAX).replace("[USAGE]", command.getUsage()));
-            return true;
-        }
-
-        // TODO: UUID check
-        UUID categoryId = UUID.fromString(args[1]);
-        UUID itemId = UUID.fromString(args[2]);
         switch (args[0]) {
-            case "add" -> addItem(sender, command, categoryId, itemId, args);
-            case "remove" -> removeItem(sender, categoryId, itemId);
-            //case "edit" -> editItem(sender, command, categoryId, itemId, args);
+            case "add" -> addItem(sender, command, args);
+            case "remove" -> removeItem(sender, command, args);
+            case "edit" -> editItem(sender, command, args);
             default ->
                     sendMessage(sender, message.getString(Messages.COMMAND_SYNTAX).replace("[USAGE]", command.getUsage()));
         }
@@ -59,37 +62,42 @@ public final class ShopItemCommand extends CommandManager {
     @Override
     public @NotNull List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String @NotNull [] args) {
         if (args.length == 1)
-            return tabComplete(Arrays.asList("add", "remove", "edit", "import"), args);
+            return tabComplete(Arrays.asList("add", "remove", "edit", "import", "adddefault"), args);
         if (args.length == 2)
-            return tabComplete(shopCategory.getCategories().stream().map(UUID::toString).toList(), args);
-        if (args.length == 3 && args[0].equals("add"))
-            return tabComplete(customItems.getCustomItemIds().stream().map(UUID::toString).toList(), args);
-        if (args.length == 3 && (args[0].equals("remove") || args[0].equals("edit"))) {
-            UUID categoryId = UUID.fromString(args[1]);
-            if (!shopCategory.containsCategory(categoryId))
-                return Collections.emptyList();
-            return tabComplete(shopItem.getCategoryItems(categoryId).stream().map(UUID::toString).toList(), args);
-        }
+            return tabComplete(shopCategory.getInternNames(), args);
+        if (args.length == 3)
+            return tabComplete(customItems.getInternNames(), args);
+        if (args.length == 4 && args[0].equals("add"))
+            return tabComplete(Arrays.stream(Material.values()).map(Material::name).collect(Collectors.toList()), args);
         if (args.length == 4 && args[0].equals("edit"))
-            return tabComplete(Arrays.asList("buy", "sell"), args);
+            return tabComplete(Arrays.asList("buy", "sell", "icon"), args);
+        if (args.length == 5 && args[0].equals("edit") && args[3].equals("icon"))
+            return tabComplete(Arrays.stream(Material.values()).map(Material::name).collect(Collectors.toList()), args);
         return Collections.emptyList();
     }
 
-    private void addItem(CommandSender sender, Command command, UUID categoryId, UUID itemId, String[] args) {
-        //          0   1            2              3          4     5
-        // shopItem add <categoryId> <customItemId> <material> <buy> <sell>
+    /*
+     * 0        1   2            3              4          5     6
+     * shopItem [0] [1]          [2]            [3]        [4]   [5]
+     * shopItem add <categoryId> <customItemId> <material> <buy> <sell>
+     */
+    private void addItem(CommandSender sender, Command command, String[] args) {
         if (args.length < 5) {
             sendMessage(sender, message.getString(Messages.COMMAND_SYNTAX).replace("[USAGE]", command.getUsage()));
             return;
         }
 
-        if (!shopCategory.containsCategory(categoryId)) {
+        String internNameCategory = args[1];
+        UUID categoryId = shopCategory.getCategoryId(internNameCategory);
+        if (!shopCategory.existsCategory(categoryId)) {
             sendMessage(sender, message.getString(Messages.SHOP_CATEGORY_NOT_EXIST));
             return;
         }
 
-        if (shopItem.containsItem(itemId)) {
-            sendMessage(sender, message.getString(Messages.SHOP_ITEM_EXIST));
+        String internNameItem = args[2];
+        UUID customItemId = customItems.getCustomItemId(internNameItem);
+        if (!customItems.existsItem(customItemId)) {
+            sendMessage(sender, message.getString(Messages.SHOP_ITEM_NOT_EXIST));
             return;
         }
 
@@ -102,7 +110,7 @@ public final class ShopItemCommand extends CommandManager {
 
         String buy = args[4];
         String sell = args[5];
-        if (!EconomyProviderImpl.MONEY_PATTERN.matcher(buy).matches() || !EconomyProviderImpl.MONEY_PATTERN.matcher(sell).matches()) {
+        if (!EconomyProvider.MONEY_PATTERN.matcher(buy).matches() || !EconomyProvider.MONEY_PATTERN.matcher(sell).matches()) {
             sendMessage(sender, message.getString(Messages.INVALID_NUMBERS));
             return;
         }
@@ -110,20 +118,37 @@ public final class ShopItemCommand extends CommandManager {
         double buyPrice = Double.parseDouble(buy);
         double sellPrice = Double.parseDouble(sell);
 
-        shopItem.addItem(new ShopItemImpl(UUID.randomUUID(), itemId, categoryId, material.name(), buyPrice, sellPrice));
+        shopItem.addItem(customItemId, categoryId, material, buyPrice, sellPrice);
         sendMessage(sender, message.getString(Messages.SHOP_ITEM_ADD));
     }
 
-    // TODO: Change this method
-    private void removeItem(CommandSender sender, UUID categoryId, UUID itemId) {
-        //          0      1            2
-        // shopItem remove <categoryId> <itemId>
-        if (!shopCategory.containsCategory(categoryId)) {
+    /*
+     * 0        1      2            3
+     * shopItem [0]    [1]          [2]
+     * shopItem remove <categoryId> <customItemId>
+     */
+    private void removeItem(CommandSender sender, Command command, String[] args) {
+        if (args.length < 3) {
+            sendMessage(sender, message.getString(Messages.COMMAND_SYNTAX).replace("[USAGE]", command.getUsage()));
+            return;
+        }
+
+        String internNameCategory = args[1];
+        UUID categoryId = shopCategory.getCategoryId(internNameCategory);
+        if (!shopCategory.existsCategory(categoryId)) {
             sendMessage(sender, message.getString(Messages.SHOP_CATEGORY_NOT_EXIST));
             return;
         }
 
-        if (!shopItem.containsItem(itemId)) {
+        String internNameItem = args[2];
+        UUID customItemId = customItems.getCustomItemId(internNameItem);
+        if (!customItems.existsItem(customItemId)) {
+            sendMessage(sender, message.getString(Messages.SHOP_ITEM_NOT_EXIST));
+            return;
+        }
+
+        UUID itemId = shopItem.getItemId(customItemId, categoryId);
+        if (!shopItem.existsItem(itemId)) {
             sendMessage(sender, message.getString(Messages.SHOP_ITEM_NOT_EXIST));
             return;
         }
@@ -132,16 +157,33 @@ public final class ShopItemCommand extends CommandManager {
         sendMessage(sender, message.getString(Messages.SHOP_ITEM_REMOVE));
     }
 
-    // TODO: Fix this method
-    /*private void editItem(CommandSender sender, Command command, UUID categoryId, UUID itemId, String[] args) {
-        //          0    1            2        3          4
-        // shopItem edit <categoryId> <itemId> <buy|sell> <value>
-        if (!shopCategory.containsCategory(categoryId)) {
+    /*
+     * 0        1    2            3              4               5
+     * shopItem [0]  [1]          [2]            [3]             [4]
+     * shopItem edit <categoryId> <customItemId> <buy|sell|icon> <value>
+     */
+    private void editItem(CommandSender sender, Command command, String[] args) {
+        if (args.length < 5) {
+            sendMessage(sender, message.getString(Messages.COMMAND_SYNTAX).replace("[USAGE]", command.getUsage()));
+            return;
+        }
+
+        String internNameCategory = args[1];
+        UUID categoryId = shopCategory.getCategoryId(internNameCategory);
+        if (!shopCategory.existsCategory(categoryId)) {
             sendMessage(sender, message.getString(Messages.SHOP_CATEGORY_NOT_EXIST));
             return;
         }
 
-        if (!shopItem.containsItem(itemId)) {
+        String internNameItem = args[2];
+        UUID customItemId = customItems.getCustomItemId(internNameItem);
+        if (!customItems.existsItem(customItemId)) {
+            sendMessage(sender, message.getString(Messages.SHOP_ITEM_NOT_EXIST));
+            return;
+        }
+
+        UUID itemId = shopItem.getItemId(customItemId, categoryId);
+        if (!shopItem.existsItem(itemId)) {
             sendMessage(sender, message.getString(Messages.SHOP_ITEM_NOT_EXIST));
             return;
         }
@@ -149,30 +191,39 @@ public final class ShopItemCommand extends CommandManager {
         switch (args[3]) {
             case "buy" -> {
                 String buy = args[4];
-                if (!EconomyProviderImpl.MONEY_PATTERN.matcher(buy).matches()) {
+                if (!EconomyProvider.MONEY_PATTERN.matcher(buy).matches()) {
                     sendMessage(sender, message.getString(Messages.INVALID_NUMBERS));
                     return;
                 }
 
                 double buyPrice = Double.parseDouble(buy);
-                double sell = shopItem.getSellPrice(itemId);
-                shopItem.updateItem(itemId, categoryId, buyPrice, sell);
+                shopItem.updateBuyPrice(itemId, buyPrice);
                 sendMessage(sender, message.getString(Messages.SHOP_ITEM_EDIT));
             }
             case "sell" -> {
                 String sell = args[4];
-                if (!EconomyProviderImpl.MONEY_PATTERN.matcher(sell).matches()) {
+                if (!EconomyProvider.MONEY_PATTERN.matcher(sell).matches()) {
                     sendMessage(sender, message.getString(Messages.INVALID_NUMBERS));
                     return;
                 }
 
                 double sellPrice = Double.parseDouble(sell);
-                double buy = shopItem.getBuyPrice(itemId);
-                shopItem.updateItem(itemId, categoryId, buy, sellPrice);
+                shopItem.updateSellPrice(itemId, sellPrice);
+                sendMessage(sender, message.getString(Messages.SHOP_ITEM_EDIT));
+            }
+            case "icon" -> {
+                String materialName = args[4];
+                Material material = Material.getMaterial(materialName);
+                if (material == null) {
+                    sendMessage(sender, message.getString(Messages.INVALID_ITEM));
+                    return;
+                }
+
+                shopItem.updateIcon(itemId, material);
                 sendMessage(sender, message.getString(Messages.SHOP_ITEM_EDIT));
             }
             default ->
                     sendMessage(sender, message.getString(Messages.COMMAND_SYNTAX).replace("[USAGE]", command.getUsage()));
         }
-    }*/
+    }
 }
